About section has completed

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    font-family: 'Raleway', sans-serif;        
+    font-family: 'Raleway', sans-serif;  
 }
 section:target{
     padding-top: 96px;
@@ -12,7 +12,11 @@ section:target{
     background-color: #000;
     z-index: 1000;
 }
-.active{
+.navbar .nav-link{
+    font-size: 19px;
+    letter-spacing: 1px;
+}
+.activate{
     color: red!important;
 }
 .navbar-toggler:focus{
@@ -49,15 +53,15 @@ border: 1px solid red!important;
 
 /* banner styles */
 
-.carousel-item{
+#banner-carousel .carousel-item{
     height: calc(100vh - 96px);
     background-position: start!important;
 }
-.carousel-item img{
+#banner-carousel  .carousel-item img{
     width: 100%;
     height: 100%;
 }
-.carousel-item:after{
+#banner-carousel .carousel-item:after{
     display: block;
     content: "";
     position: absolute;
@@ -67,9 +71,11 @@ border: 1px solid red!important;
     bottom: 0;
     background-color: rgba(0, 0, 0,.5);
 }
-.carousel-caption{
+#banner-carousel .carousel-caption{
     bottom:120px;
 }
+
+
 /* heading styles */
 .headings{
     position: relative;
@@ -80,9 +86,14 @@ border: 1px solid red!important;
 }
 .headings i{
     position: absolute;
-    bottom:-15px;
-    left: 47%;
+    bottom:-20px;
+    left: 50%;
+    transform: translateX(-50%);
     color:red;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 .main-heading{    
     color: #777;
@@ -95,7 +106,7 @@ width:40%;
 height: 1px;
 background-color: red;
 position: absolute;
-bottom:-10px;
+bottom:-12px;
 left:0;
 }
 .main-heading::after{
@@ -105,26 +116,120 @@ left:0;
     height: 1px;
     background-color: red;
     position: absolute;
-    bottom:-10px;
+    bottom:-12px;
     right: 0;
     }
+
+
     
-.about-img img{
-    width:100%;
-    height: 100%;
-}
+
 
 
 /* about sectiobn  */
 
 .about-img img{
-    height:400px;
+    width:100%;
+    height:250px;
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
+.features{
+    background-color: rgba(0, 0, 0, 0.9);
+    color:#999;
+}
+.features .icon-wrapper{
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+}
+.features .icon-wrapper:hover{
+    background-color: red;
+}
+.features .icon-wrapper i{
+    color:red;
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+}
+.features .icon-wrapper:hover i{
+    color:black;
+    
+}
+.features h3{
+    color:#999;
+}
 
+/* Testimonial sectiion */
+.slide-area{
+    background: linear-gradient(rgba(1, 3, 32, 0.6),rgba(10, 1, 27, 0.6)),url('./assets/img/banner-1.jpeg') no-repeat;;
+    background-size: cover;
+    background-position:center;
+    background-attachment: fixed;
+}
+#ratingCarousel .img-area{
+    width:150px;
+    height:150px;
+    margin: 0 auto;
+    border: 4px solid #ccc;
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+}
+#ratingCarousel .img-area:hover{ 
+    border: 4px solid red;
+    border-radius: 50%; 
+    -webkit-border-radius: 50%; 
+    -moz-border-radius: 50%; 
+    -ms-border-radius: 50%; 
+    -o-border-radius: 50%;
+    overflow: hidden;
+}
+#ratingCarousel .img-area img{
+    width:100%;
+    height:100%;
+    }
+#ratingCarousel .carousel-caption{
+        position:static;
+        padding-bottom: 30px;
+}
+
+/* Menu styles */
+.recipe-card{
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;    
+}
+.recipe-card:hover{
+    transform:translateY(-10px);
+    -webkit-transform:translateY(-10px);
+    -moz-transform:translateY(-10px);
+    -ms-transform:translateY(-10px);
+    -o-transform:translateY(-10px);
+    -webkit-transform:translateY();
+}
+.recipe-img{    
+    height:250px;   
+}
+
+
+@media(min-width:568px){
+    .about-img img{        
+        height:300px;
+    }
+}
 @media(min-width:768px){
     .cool-link:hover::after{
         width: calc(100% - 1rem);
+    }
+    .about-img img{        
+        height:400px;
     }
 }
 
