--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-::-webkit-scrollbar{
+body::-webkit-scrollbar{
 width:8px;
 }
-::-webkit-scrollbar-track{
+body::-webkit-scrollbar-track{
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -9,7 +9,7 @@ width:8px;
     -o-border-radius: 10px;
     box-shadow:0 0 3px gray;
 }
-::-webkit-scrollbar-thumb{
+body::-webkit-scrollbar-thumb{
     background-color: #aaa;
     border:2px solid #fff;
     border-radius: 12px;
